Fixed all Follow and Unfollow Bugs
-UserServiceImpl
Changed return typ from User to UserResponseDto in getFollowers method
Updated username before returning UserResponseDto
-User Entity
following and follower setup was identical but with seperate table names and both repersented following, I changed followers to share the same table and repersent followers
-UserRepository
Changed return type of findByCredentialIsUsername to an Optional<User>
Fix all problems related to this change in the UserServiceImpl and TweetServiceImpl